# mesa-vulkan-sim

./: .gitignore  meson.build
.cache/clangd/index/: GLSL.ext.AMD.h.980E1C705DA5EF90.idx  GLSL.std.450.h.A7420EB9C764FBC9.idx  OpenCL.std.h.991EA4C74661DD63.idx  accum.c.00708A8613943771.idx  accum.h.549D3374297AF36D.idx  anon_file.c.0E7E85A20E6336BA.idx  anon_file.h.272341DF1F4724C2.idx  api.h.871791AD8FD9332C.idx  api_arrayelt.c.BA4804178CB97745.idx  api_arrayelt.h.647D114582AF0376.idx  apple_cgl.c.F958179E78A1803F.idx  apple_cgl.h.AB1B95768C7A4FE9.idx  apple_glapi.c.01A8DF0AA4A93B19.idx  apple_glx.c.8C2D3DEFB374628C.idx  apple_glx.h.5ABA3F8CBFDF2230.idx  apple_glx_context.c.71B8740FE2BC65D8.idx  apple_glx_context.h.AF065620CD16B2FE.idx  apple_glx_drawable.c.A138F993E8C55257.idx  apple_glx_drawable.h.25CC4D80BD320940.idx  apple_glx_log.c.BA9A140088CFECEE.idx  apple_glx_log.h.49182CB8AF8A65A5.idx  apple_glx_pbuffer.c.76953CE539BC621A.idx  apple_glx_pixmap.c.7C1F2E8F894F34A0.idx  apple_glx_surface.c.A4C7253630261E2F.idx  apple_visual.c.C93BBB2F24119F85.idx  apple_visual.h.B34524D96698BA15.idx  apple_xgl_api.h.4E3E13574646E5A7.idx  apple_xgl_api_read.c.08D96551A53ABBE5.idx  apple_xgl_api_stereo.c.E8F5376FFFD06EA8.idx  apple_xgl_api_viewport.c.BDCB0572FCCF1218.idx  appledri.c.26377FD501DEDB7C.idx  appledri.h.814AF353E70A6424.idx  appledristr.h.9FC825D92B64BB2D.idx  arbprogparse.c.24F3D416A6363916.idx  arbprogparse.h.30639CCABA8D7AEB.idx  arbprogram.c.B77EED8439EAE837.idx  ast.h.27F4598BB2D60356.idx  (+1884 more)
foveatedShaders/: MESA_SHADER_CLOSEST_HIT_2.ptx  MESA_SHADER_CLOSEST_HIT_2.ptxinfo  MESA_SHADER_MISS_1.ptx  MESA_SHADER_MISS_1.ptxinfo  MESA_SHADER_RAYGEN_0.ptx  MESA_SHADER_RAYGEN_0.ptxinfo
proceduralShader/: MESA_SHADER_CLOSEST_HIT_2.ptx  MESA_SHADER_CLOSEST_HIT_3.ptx  MESA_SHADER_CLOSEST_HIT_3.ptxinfo  MESA_SHADER_INTERSECTION_4.ptx  MESA_SHADER_INTERSECTION_4.ptxinfo  MESA_SHADER_MISS_1.ptx  MESA_SHADER_RAYGEN_0.ptx  MESA_SHADER_RAYGEN_0.ptxinfo
src/compiler/: glsl_types.h  nir_types.cpp  nir_types.h  shader_enums.h
src/gallium/frontends/lavapipe/: gen_rt_pack.h  gpgpusim_bvh.h  gpgpusim_calls_from_mesa.h  lvp_acceleration_structure.c  lvp_acceleration_structure.h  lvp_cmd_buffer.c  lvp_descriptor_set.c  lvp_device.c  lvp_execute.c  lvp_image.c  lvp_pipeline.c  lvp_pipeline.h  lvp_pipeline_rt.c  lvp_private.h  meson.build  vsim_private.h
src/intel/: Makefile.sources
src/loader/: loader.c
src/util/: u_math.c  u_math.h
(+56 files in other folders)
